# Devin_FDE_takehome_johnrho

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: morning-scan.yml
app/: __init__.py
app/api/: main.py  routes.py
app/core/: config.py  database.py  seed.py
app/models/: schemas.py
app/services/: consumption.py  devin_client.py  github_client.py  metrics.py  orchestrator.py  repo_checkout.py  scanner.py  superset_preview.py
app/static/: index.html
app/utils/: logger.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: keep_awake.sh  seed_demo.py
superset-preview/: devin-blueprint.md  docker-compose.yml
tests/: conftest.py  test_api.py  test_consumption.py  test_database.py  test_devin_client.py  test_metrics.py  test_orchestrator.py  test_scanner.py  test_schemas.py
