[project]
name = "devin-automation"
version = "0.1.0"
description = "Event-driven automation using Devin API for Superset issue remediation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "PyGithub>=2.3.0",
    "structlog>=24.4.0",
    "pip-audit>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
